Fix height of widgets on mobile screen

--- a/apps/ui/src/app/page.scss
+++ b/apps/ui/src/app/page.scss
@@ -49,8 +49,12 @@
   }
 }
 
+.activity-stream-widget {
+  min-height: 16rem;
+}
+
 .stream-chat-widget {
-  height: 30rem;
+  min-height: 30rem;
 }
 
 @media screen and (min-width: 48rem) {
@@ -108,10 +112,6 @@
     grid-column: 1 / 3;
     grid-row: 3;
   }
-
-  .stream-chat-widget {
-    height: 30rem;
-  }
 }
 
 @media screen and (min-width: 75rem) {
@@ -134,12 +134,14 @@
     grid-column: 3;
     grid-row: 1;
     padding: 0;
+    min-height: 0;
   }
 
   .stream-chat-widget {
     grid-column: 3;
     grid-row: 2;
     height: auto;
+    min-height: 0;
   }
 
   .bet-list-widget {
